# tech-news-synth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  soak.out  tail-app-logs.sh
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: .gitkeep  cutover-report.md  soak-log.md  x-api-baseline.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 2026_04_13_0925-2a0b7b569986_initial_schema_articles_clusters_posts_.py  2026_04_13_1724-c503b386ce5e_add_source_state_table.py  2026_04_15_1120-7d9e6d1d1c6d_add_post_tweets_table.py
config/: hashtags.yaml  sources.yaml  sources.yaml.example
docs/: DEPLOY.md  runbook-orphaned-pending.md
scripts/: create_test_db.sh  cutover_verify.py  smoke_anthropic.py  smoke_x_auth.py  smoke_x_post.py  soak_monitor.py
src/tech_news_synth/: __init__.py  __main__.py  config.py  ids.py  killswitch.py  logging.py  scheduler.py
tests/: conftest.py
tests/integration/: conftest.py  test_antirepeat.py  test_articles_upsert.py  test_auto_disable.py  test_caps_daily.py  test_caps_monthly.py  test_cli_post_now.py  test_cli_replay.py  test_cli_source_health.py  test_cluster_audit.py  test_cluster_window.py  test_clusters_repo.py  test_conditional_get.py  test_cycle_summary_e2e.py  test_failure_isolation.py  test_fixture_isolation.py  test_get_articles_in_window.py  test_get_recent_posts_with_source_texts.py  test_ingest_cycle.py  test_migration_roundtrip.py  test_orchestrator_counts.py  test_orchestrator_slow_day.py  test_posts_repo.py  test_posts_repo_phase7.py  (+10 more)
(+205 files in other folders)
