[project]
name = "tech-news-synth"
version = "0.1.1"
description = "Automated PT-BR tech news synthesis agent for @ByteRelevant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "jucassoli" }]
dependencies = [
    "anthropic>=0.79,<0.80",
    "tweepy>=4.14,<5",
    "scikit-learn>=1.8,<2",
    "feedparser>=6.0.11,<7",
    "httpx[http2]>=0.28,<0.29",
    "numpy>=2,<3",
    "sqlalchemy>=2.0.40,<2.1",
    "psycopg[binary,pool]>=3.2,<4",
    "alembic>=1.18,<2",
    "apscheduler>=3.10,<4",
    "structlog>=25,<26",
    "orjson>=3.10,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-ulid>=3,<4",
    "tenacity>=9,<10",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5,<6",
    "python-slugify>=8,<9",
    "unidecode>=1.3,<2",
    "pyyaml>=6,<7",
    "twitter-text-parser>=3,<4",
    "setuptools>=75,<81",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3.14,<4",
    "pytest-cov>=5,<7",
    "respx>=0.21,<1",
    "responses>=0.25,<1",
    "time-machine>=2.14,<3",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tech_news_synth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = ["integration: requires live postgres"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# Alembic auto-generates version files in its own style; don't lint them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DTZ", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["DTZ"]
